--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,12 +22,8 @@
   </div>
 <% end %>
       <ul class="nav navbar-nav">
-        <% if user_signed_in? && current_user.admin %>
+        <% if user_signed_in? %>
           <li><%= link_to "Add Film", new_movie_path, class: "active" %></li>
-          <li><%= link_to "User Account", edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-          <li><%= link_to "Profile", user_path(current_user) %></li>
-        <% elsif current_user %>
           <li><%= link_to "User Account", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           <li><%= link_to "Profile", user_path(current_user) %></li>
