--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -28,16 +28,16 @@
                 </tr>
               </tbody>
             </table>
-            <% if !current_user.admin %>
+
             <%= link_to "Write a Comment", new_movie_review_path(@movie), class: "btn btn-danger" %>
-            <% end %>
+
           </div>
         </div>
         <div class="col-md-7 col-md-ffset-1" align="right">
             <h2 class = "review-title"><%= @movie.title %></h2>
 
 
-            <% if @reviews.blank? && !current_user.admin %>
+            <% if @reviews.blank? %>
             <h4>No reviews just yet, would you like to add the first!</h4>
             <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-danger" %>
           <% else %>
@@ -53,9 +53,9 @@
           <% end %>
         </div>
       </div>
-      <% if current_user && current_user.admin %>
+
       <%= link_to 'Edit', edit_movie_path(@movie) %> |
       <%= link_to "Delete", movie_path, :confirm => "Are you sure?", :method => :delete %> |
-      <% end %>
+
       <%= link_to 'Back', movies_path %>
     </div>
