--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,16 @@
 <div class="container">
   <div class="panel panel-default">
+    <div class= "Profile"
 
-<h1><%= @user.firstname  %> <%= @user.surname %></h1>
 
-<p><%= @user.email %></p>
-<p><%= @user.dateofbirth %></p>
+<p><%= image_tag("34AD2.jpg") %><p>
 
+
+<h1><%= @user.firstname  %> <%= @user.surname %></h1><br><br>
+
+<p> Email: <%= @user.email %></p>
+<p> Date of birth: <%= @user.dateofbirth %></p>
+
+</div>
 </div>
 </div>
