--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,9 @@ img {height: 500px;
   font-size: 24px;
   text-align:center;
 }
+
+.page{
+  background: #FFFFFF;
+  border: 2px solid white;
+  text-align: center;
+}
